# pd-package-resolved

./: .clang-format  .gitattributes  .gitignore  .lldbinit  CMakeLists.txt  Justfile  Makefile  Package.swift  README.md  swift.mk
.nova/: Configuration.json
.nova/Tasks/: Format Files.json  Game (Simulator).json  Unit Tests.json
PlaydateKit/: Package.swift
PlaydateKit/Sources/PlaydateKit/: Playdate+Graphics.swift  Playdate+System.swift
Source/: pdxinfo  prconfig
Sources/: CharoletteStandard
Sources/Charolette/: Boxes.swift  Charolette.swift  Comparable+Clamped.swift  Movement.swift  Screen.swift  Vector.swift
Sources/KDL/: DartConfiguration.tcl  Makefile
Sources/KDL/bindings/cpp/: Makefile
Sources/KDL/include/: module.modulemap
Sources/KDL/src/: bigint.c
Sources/KDL/tests/: DartConfiguration.tcl  Makefile  emitter_test  example_doc_test  parser_test  utf8_test
Sources/PackageResolved/: ClockSubsystem.swift  Configuration.swift  Data.swift  Fonts.swift  GameSystem.swift  Gameloop.swift  Images.swift  PackageResolved.swift  PackageSubsystem.swift  Palette.swift  PaletteSubsystem.swift  Player.swift  PlayerSubsystem.swift  Setup.swift  UI.swift
Sources/PackageResolved/Entities/: Palette.swift
Sources/PackageResolved/Fundamentals/: GameRunner.swift
Tests/CharoletteTests/: BoxTests.swift  MovementTests.swift  ScreenTests.swift  VectorTests.swift
Tests/PackageResolved-SwiftyTests/: PackageResolved_SwiftyTests.swift
charolette/: CMakeLists.txt  boxes.c  boxes.h  movement.c  movement.h  screen.c  screen.h  vector.c  vector.h
include/: fonts.h  gameloop.h  images.h  palette.h  player.h  text.h
src/: fonts.c  fonts.h  gameloop.c  gameloop.h  images.c  images.h  main.c  movement.c  movement.h  palette.c  palette.h  player.c  player.h  text.c  text.h  vector.h
test/: CMakeLists.txt  test.c
test/munit/: munit.c  munit.h
(+8 files in other folders)
